# raifetch

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: default.toml
src/: config.rs  error.rs  main.rs  theme.rs
src/ascii/: mod.rs
src/image/: block.rs  cache.rs  iterm2.rs  kitty.rs  mod.rs  sixel.rs
src/info/: battery.rs  bios.rs  boot.rs  bootloader.rs  cpu.rs  disk.rs  display.rs  entropy.rs  font.rs  gpu.rs  gtk.rs  host.rs  icons.rs  init.rs  kernel.rs  locale.rs  macos_display.rs  memory.rs  mobo.rs  mod.rs  network.rs  os.rs  packages.rs  processes.rs  procfs.rs  resolution.rs  shell.rs  swap.rs  terminal.rs  theme.rs  uptime.rs  users.rs  wm.rs
src/render/: mod.rs
