[package]
name = "raifetch"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "raifetch"
path = "src/main.rs"

[dependencies]
whoami       = "1.5"
anyhow       = "1"
thiserror    = "1"
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"
image        = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
base64       = "0.22"
owo-colors   = { version = "4", features = ["supports-colors"] }
terminal_size = "0.4"
clap         = { version = "4", features = ["derive"] }
dirs         = "5"
libc = "0.2.186"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
